edit fonts family

--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -6,7 +6,7 @@
   background-color: #f8fafc;
   min-height: 100vh;
   direction: rtl;
-  font-family: 'Cairo', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
   @media (max-width: 1024px) {
     padding: 1.5rem;
@@ -313,7 +313,8 @@
   background-color: #f8fafc;
   min-height: 100vh;
   direction: rtl;
-  font-family: 'Cairo', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  // font-family: 'Cairo', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
   @media (max-width: 1024px) {
     padding: 1.5rem;
