--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -26,6 +26,7 @@
       margin: 0 0 0.25rem 0;
       color: #333333;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    //  font-family: 'Cairo', sans-serif;
 
       .title-icon {
         display: flex;
