--- a/src/app/pages/categories/modals/category-details-modal/category-details-modal.component.scss
+++ b/src/app/pages/categories/modals/category-details-modal/category-details-modal.component.scss
@@ -104,7 +104,7 @@ $gray-900: #111827;
   box-shadow: 0 25px 50px rgba(0, 0, 0, 0.25);
   width: 100%;
   max-width: 1000px;
-  max-height: 90vh;
+  max-height: 100vh;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -214,7 +214,7 @@ $gray-900: #111827;
   display: grid;
   grid-template-columns: 400px 1fr;
   min-height: 500px;
-  overflow: hidden;
+  overflow: auto;
   padding: 0.5rem 2rem;
 
   @media(max-width: 768px)
