--- a/src/app/pages/products/modals/product-modal/product-modal.component.html
+++ b/src/app/pages/products/modals/product-modal/product-modal.component.html
@@ -374,24 +374,117 @@
                     </option>
                   </select>
                 </div>
+                <!-- بدل الـ select القديم للحالة -->
                 <div class="form-group">
                   <label class="form-label">
                     <span>الحالة</span>
                     <span class="required-indicator">*</span>
                   </label>
-                  <select
+
+                  <div class="multi-select-wrapper">
+                    <div
+                      class="multi-select-dropdown"
+                      [class.active]="statusDropdownOpen"
+                      (click)="toggleStatusDropdown()"
+                    >
+                      <div class="selected-display">
+                        <div class="selected-items">
+                          <ng-container
+                            *ngIf="getStatusArray().length > 0; else noStatus"
+                          >
+                            <span
+                              *ngFor="let item of getStatusArray()"
+                              class="selected-badge"
+                              [class.sale]="item === 'بيع'"
+                              [class.purchase]="item === 'شراء'"
+                              [class.lease]="item === 'إيجار'"
+                            >
+                              <i [class]="getStatusIcon(item)"></i>
+                              {{ item }}
+                              <button
+                                type="button"
+                                class="remove-btn"
+                                (click)="
+                                  toggleStatusItem(item);
+                                  $event.stopPropagation()
+                                "
+                              >
+                                ×
+                              </button>
+                            </span>
+                          </ng-container>
+                          <ng-template #noStatus>
+                            <span class="placeholder">اختر الحالة...</span>
+                          </ng-template>
+                        </div>
+                        <i
+                          class="fa fa-chevron-down arrow"
+                          [class.rotated]="statusDropdownOpen"
+                        ></i>
+                      </div>
+                    </div>
+
+                    <div
+                      class="dropdown-options"
+                      [class.show]="statusDropdownOpen"
+                    >
+                      <div
+                        class="option"
+                        [class.selected]="isStatusSelected('شراء')"
+                        (click)="toggleStatusItem('شراء')"
+                      >
+                        <i class="fa fa-shopping-cart icon"></i>
+                        <span>شراء</span>
+                        <i
+                          class="fa fa-check check"
+                          *ngIf="isStatusSelected('شراء')"
+                        ></i>
+                      </div>
+
+                      <div
+                        class="option"
+                        [class.selected]="isStatusSelected('إيجار')"
+                        (click)="toggleStatusItem('إيجار')"
+                      >
+                        <i class="fa fa-key icon"></i>
+                        <span>إيجار</span>
+                        <i
+                          class="fa fa-check check"
+                          *ngIf="isStatusSelected('إيجار')"
+                        ></i>
+                      </div>
+
+                      <div
+                        class="option sale"
+                        [class.selected]="isStatusSelected('بيع')"
+                        (click)="toggleStatusItem('بيع')"
+                      >
+                        <i class="fa fa-sign-hanging icon"></i>
+                        <span>بيع</span>
+                        <i
+                          class="fa fa-check check"
+                          *ngIf="isStatusSelected('بيع')"
+                        ></i>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- حقل مخفي للـ ngModel عشان الـ validation يشتغل -->
+                  <input
+                    type="hidden"
                     [(ngModel)]="formData.status"
                     name="status"
                     required
-                    class="form-select"
-                    (focus)="onInputFocus($event)"
-                    (blur)="onInputBlur($event)"
-                    aria-label="الحالة"
+                    #statusInput="ngModel"
+                  />
+
+                  <div
+                    class="error-message"
+                    *ngIf="statusInput.invalid && statusInput.touched"
                   >
-                    <option value="شراء">شراء</option>
-                    <option value="إيجار">إيجار</option>
-                    <option value="إيجار وشراء">إيجار وشراء</option>
-                  </select>
+                    <i class="material-icons">error</i>
+                    يجب اختيار حالة واحدة على الأقل
+                  </div>
                 </div>
                 <div class="form-group">
                   <label class="form-label">
