--- a/src/app/pages/products/modals/product-modal/product-modal.component.html
+++ b/src/app/pages/products/modals/product-modal/product-modal.component.html
@@ -495,6 +495,7 @@
                     [(ngModel)]="formData.confirmationStatus"
                     name="confirmationStatus"
                     class="form-input"
+                    required
                     placeholder="تم الشراء او تم البيع او تم الإيجار ......... "
                     (focus)="onInputFocus($event)"
                     (blur)="onInputBlur($event)"
